[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.27.5"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio-tungstenite = "*"
tokio = { version = "1.41.1", features = ["full"] }

uuid = { version = "1.11.0", features = ["v4"]  }
futures-util = "0.3.31"
